# autoslide

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MODEL_SELECTION.md  README.md  TESTING_SUMMARY.md  WORKFLOW_SUCCESS.md  __init__.py  artifacts.dvc  index.html  main_gui.py  mkdocs.yml  objects.inv  plots.dvc  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  verify_test_logic.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: README.md  docs.yml  test-pipeline.yml
advanced/arbitrary-directory-prediction/: index.html
advanced/color-correction/: index.html
advanced/histogram-normalization/: index.html
api/models/: index.html
api/pipeline/: index.html
api/utils/: index.html
autoslide/: __init__.py  config.json  get_section_from_hash.py  pixel_clustering.py
autoslide/_archive/: pixel_clustering.py  slideio_test.py
autoslide/artifacts/: best_val_mask_rcnn_model.pth  final_mask_rcnn_model.pth  train_losses.npy  val_losses.npy
autoslide/fibrosis_calculation/: calc_fibrosis.py
autoslide/gui/: __init__.py  annotation_gui.py  launch_annotation_gui.py  launch_viewer.py  section_viewer.py
autoslide/pipeline/: run_pipeline.py  suggest_regions.py  utils.py
autoslide/src/: __init__.py  config.json
autoslide/utils/: get_section_from_hash.py
autoslide/visualization/: __init__.py  compare_positivity.py  overlay_manual_auto_annots.py  visualize_annotations.py
contributing/: index.html
data/: .gitignore  .tracking.dvc  balanced_images.dvc  final_annotation.dvc  initial_annotation.dvc  labelled_images.dvc  processed_svs.dvc  suggested_regions.dvc
data/dvc-setup/: index.html
data/labelled_images/: Export_catalog_query_3_10_2025.ndjson
docs/: ARBITRARY_DIRECTORY_PREDICTION.md  HISTOGRAM_PERCENTILE_NORMALIZATION.md  contributing.md  index.md  license.md
docs/advanced/: arbitrary-directory-prediction.md  color-correction.md
docs/api/: models.md  pipeline.md  utils.md
docs/data/: dvc-setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/pipeline/: fibrosis-quantification.md  final-annotation.md  initial-annotation.md  overview.md  region-suggestion.md  vessel-detection.md
docs/tools/: mask-validation-gui.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
license/: index.html
manuscript/: auto_slide_manuscript_v1.md
manuscript/drafts/: auto_slide_manuscript.md
pipeline_testing/: PIPELINE_STATUS.md  README.md  auto_label_regions.py  create_mock_model.py  download_test_data.py  prefect_pipeline.py
search/: search_index.json
src/: README.md  get_section_from_hash.py  pixel_clustering.py
tests/: README_PREDICTION_TESTS.md  __init__.py  test_annotation.py  test_color_correction.py  test_color_normalization.py  test_color_processor.py  test_prediction.py  test_training.py
(+79 files in other folders)
